# talk_coding_python_with_ai_tools_in_the_real_world

./: .gitignore  pyproject.toml  readme.md
.github/: copilot-instructions.md
.streamlit/: config.toml
docs/: user_guide.md
instructions/: agent_workflow.md  coding_principles.md  project_description.md
slides/: invitation.md
src/: __init__.py  app.py  config.py  settings.yaml  tax_calculator.py
tests/: test_tax_calculator.py
workflow/: agent_log.md  project_decisions.md
